--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </h1>
 	<h2>links</h2>
 	<ul>
-  <li><a href="programming languages main page.html">main page</a></li>
+  <li><a href="index.html">main page</a></li>
   <li><a href="History of programming languages.html">History of programming languages</a></li>
   <li><a href="Types of programming languages.html">Types of programming languages like (java,python and c++)</a></li>
    <li><a href="The importance of programming languages.html">The importance of programming languages</a></li>
